smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-invalid-object-key1.smithy
// Parse error at line 3, column 9 near `: `: Expected: ')', but found ':'
namespace com.foo
@foo(100: true)
string MyString
